добавил заголовок и название сайта в строке браузера

--- a/index.html
+++ b/index.html
@@ -1,3 +1,5 @@
 <html>
-  <h1></h1>
+  <title></title>
+  <body style="font-famaly:arial; ">
+  <h1 style="color:white">Дворцы из стекла и бетона</h1>
 </html>
