--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <html>
   <title></title>
-  <body style="font-family:arial; ">
-  <h1 style="color:white">Дворцы из стекла и бетона</h1>
+    <body style="font-family:arial; ">
+      <h1 style="color:white">Дворцы из стекла и бетона</h1>
+  <body>
 </html>
