--- a/index.html
+++ b/index.html
@@ -2,5 +2,5 @@
   <title></title>
     <body style="font-family:arial; ">
       <h1 style="color:white">Дворцы из стекла и бетона</h1>
-  <body>
+  </body>
 </html>
