--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <html>
   <body style="font-family:arial">
-      <h1 style="color:white">Дворцы из стекла и бетона</h1>
+      <h1 style="color:black">Дворцы из стекла и бетона</h1>
   </body>
 </html>
