--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <html>
   <head>
-    <title>Типовые панельки</title>
+    <title>Типовые панельки и не только</title>
   </head>
 <body style="font-family:Calibri;background:lightslategray;">
   <header style="background-color:white; color:white;"></header>
@@ -10,8 +10,7 @@
   </header>
   <main>
     <h1 style="color:white;text-align: center;">Дворцы из стекла и бетона</h1>
-    <h1 style="color:white;text-align: center;">Это — панельки</h1>
-    <h2 style="color:white;text-align: center;">На данном сайте вы найдёте множество фотографий, описаний и историй типовых советских панельных домов</h1>
+    <h2 style="color:white;text-align: center;">На данном сайте вы найдёте множество фотографий, описаний и историй типовых советских панельных (и не только панельных)  домов</h1>
     <h1 id="hrushevki" style="color:whitesmoke">Хрущёвки</h1>
       <table style="border-collapse: collapse;border:1px solid black">
         <tr style="border: 1px solid black; background-color:goldenrod;">
