изменил кнопки получилась херня

--- a/index.html
+++ b/index.html
@@ -5,8 +5,10 @@
   </head>
 <body style="font-family:calibri;background:lightslategray;">
   <header style="background-color:white; color:lightslategray; height: 50px;">
-    <a href="#hrushevki" style="color:lightslategray; height:100px;">Хрущевки</a>
-    <a href="#brezhnevki" style="color:lightslategray">Брежневки</a>
+    <div class="grabli">
+      <a class="ananas" href="#hrushevki" style="color:lightslategray; height:100px;">Хрущевки</a>
+      <a class="ananas" href="#brezhnevki" style="color:lightslategray">Брежневки</a>
+    </div>
   </header>
   <main>
     <h1 style="color:white;text-align: center;">Дворцы из стекла и бетона</h1>
@@ -174,12 +176,6 @@
     <img src="https://prawdom.ru/progjekt_docs/vulih.jpg">
       <h2 style="color: white;">П-29</h2>
     <img src="https://novostroev.ru/upload/iblock/c5e/doma_serii_ii-29.jpg">
-  <h1 style="color:white;text-align: center;">Планировки</h1>
-    <h2 style="color:white">К-7</h2>
-      <img src="https://a.d-cd.net/UIAAAgAuNOA-960.jpg">
-    <h2 style="color:white">1-515/5</h2>
-      <img src="https://www.pereplanirovkamos.ru/sites/default/files/1-515-plan-etaja.jpg">
-    <h2 style="color: white;">114-85</h2>
   <footer>
     <p style="color: white">Связь со мной только через E-mail: no.name.4709@gmail.com<p>
   </footer>
