--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
 <body style="font-family:calibri;background:lightslategray;">
   <header style="background-color:white; color:lightslategray; height: 50px;">
     <div class="grabli">
-      <a class="ananas" href="#hrushevki" style="color:lightslategray; height:100px;">Хрущевки</a>
-      <a class="ananas" href="#brezhnevki" style="color:lightslategray">Брежневки</a>
+      <a href="#hrushevki" style="color:lightslategray; height:100px;">Хрущевки</a>
+      <a href="#brezhnevki" style="color:lightslategray">Брежневки</a>
     </div>
   </header>
   <main>
