--- a/index.html
+++ b/index.html
@@ -4,9 +4,9 @@
     <link rel="stylesheet" href="style.css">
   </head>
 <body style="font-family:calibri;background:lightslategray;">
-  <header style="background-color:white; color:lightslategray; height: 50px;">
+  <header style="background-color:white; color:lightslategray;">
     <div class="grabli">
-      <a href="#hrushevki" style="color:lightslategray; height:100px;">Хрущевки</a>
+      <a href="#hrushevki" style="color:lightslategray;">Хрущевки</a>
       <a href="#brezhnevki" style="color:lightslategray">Брежневки</a>
     </div>
   </header>
