--- a/index.html
+++ b/index.html
@@ -5,9 +5,9 @@
   </head>
 <body style="font-family:calibri;background:lightslategray;">
   <header style="background-color:white; color:lightslategray;">
-    <div class="grabli">
-      <a href="#hrushevki" style="color:lightslategray;">Хрущевки</a>
-      <a href="#brezhnevki" style="color:lightslategray">Брежневки</a>
+    <div>
+      <a class="ananas" href="#hrushevki" style="color:lightslategray;">Хрущевки</a>
+      <a class="ananas" href="#brezhnevki" style="color:lightslategray">Брежневки</a>
     </div>
   </header>
   <main>
